# ml-model-comparison-stlf

./: .gitignore  README.md  XGBoost.ipynb  pyproject.toml
notebooks/: Baseline_model.ipynb  EDA.ipynb  LSTM.ipynb  Preprocessing.ipynb  Random_Forest.ipynb  Random_Forest_extended_features.ipynb  Transformer.ipynb  XGBoost.ipynb  extended_feature_engineering.ipynb  feature_engineering.ipynb  model_comparison.ipynb
src/data/: combining_data.py
