[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stlf_germany"
version = "0.0.1"
description = "Bachelor thesis project: Comparative analysis of RF, LSTM, and Transformer models on STFL Germany energy consumption data"
authors = [
  { name = "SG" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.9.6"


[tool.ruff]
line-length = 99
src = ["stlf_germany"]
include = ["pyproject.toml", "stlf_germany/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["stlf_germany"]
force-sort-within-sections = true

